Test fix sentinel on mobile

--- a/src/styles.css
+++ b/src/styles.css
@@ -34,7 +34,6 @@ mark {
 
 [appSentinel] {
   display: block;
-  min-height: 10px;
+  height: 10px;
   width: 100%;
-  background: red; /* чтобы точно видеть, где он на телефоне */
 }
